# mvp

./: .replit  BAKAME_Architecture_Diagrams.md  BAKAME_Architecture_Documentation.md  BAKAME_Current_Codebase_Structure.md  BAKAME_MVP_Summary.md  BAKAME_Pitch_Deck.md  BAKAME_System_Architecture_Diagrams.md  BAKAME_Technical_Specifications.md  Demo_Call_Script.md  GITHUB_DEPLOYMENT_SETUP.md  MIGRATION_NOTES.md  QA_Testing_Checklist.md  REALTIME_API_IMPLEMENTATION.md  package-lock.json  package.json  replit.md
bakame-backend/: .env  .env.telnyx.example  .env.template  .gitignore  AUDIO_FLOW_ILLUSTRATION.md  AUDIO_ROUTING_DIAGNOSIS.md  DEPLOY_TO_FLY.md  Dockerfile  README.md  TELNYX_MIGRATION_GUIDE.md  WEBSOCKET_BRIDGE_FIX_PLAN.md  audio_diagnosis_log.json  bakame_test.db  comprehensive_audio_diagnosis.py  create_pooler_role.py  create_tables.py  debug_audio_conversion_pipeline.py  debug_audio_frame_counting.py  debug_elevenlabs_audio_response.py  debug_message_format.py  debug_websocket_connection.py  debug_websocket_traffic.py  diagnose_audio_routing.py  fly.toml  google_credentials.json  investigate_audio_routing_issue.py  investigate_message_format.py  main.py  pyproject.toml  real_world_audio_diagnosis.json  real_world_audio_test.py  run_ngrok_simple.sh  setup_ngrok.sh  setup_ngrok_auth.sh  start_localtunnel.sh  start_ngrok.py  test_bakame_integration.py  test_complete_integration.py  test_connection.py  test_curriculum_restructure.py  (+9 more)
bakame-backend/app/: config.py  deepgram_tts_client.py  elevenlabs_client.py  elevenlabs_tts_client.py  google_tts_client.py  main.py  (+3 more)
(+240 files in other folders)
