[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
twilio = "^9.6.5"
openai = "^1.97.1"
redis = "^6.2.0"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
sqlalchemy = "^2.0.41"
requests = "^2.31.0"
aiohttp = "^3.9.0"
pyjwt = "^2.8.0"
bcrypt = "^4.0.1"
email-validator = "^2.1.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
